--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/images/nhexavision-logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/images/spectra-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NhexaVision</title>
+    <title>Spectra | NHEXA Entertainment</title>
   </head>
   <body>
     <div id="root"></div>
